# Sylvie

./: .gitignore  CMakeLists.txt  README.md  run
include/sylvie/: bot.h  uci.h
include/sylvie/core/: board.h  constants.h  eval.h  movegen.h  search.h  utils.h
include/sylvie/core/board/: board.h  move.h  piece.h  square.h
include/sylvie/core/utils/: logger.h  utils.h
src/: bot.cpp  main.cpp  uci.cpp
src/core/: CMakeLists.txt  board.cpp  eval.cpp  movegen.cpp  search.cpp  utils.cpp
src/core/board/: board.cpp  move.cpp  piece.cpp  square.cpp
src/core/utils/: logger.cpp  utils.cpp
src/tests/: perft.cpp
